[project]
name = "auto-vlm"
version = "0.1.0"
description = "Autonomous research: training a tiny multi-task VLM from scratch in MLX"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.22.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.8.0",
    "requests>=2.31.0",
    "pycocotools>=2.0.7",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
